--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,13 +13,10 @@ dynamic = ["version"]
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies =  [
-    "comm>=0.1.0",
+    "ipywidgets>=7.6.0",
     "importlib-metadata; python_version < '3.8'",
-    "jupyterlab_widgets~=3.0.10",
-    "psygnal>=0.8.1",
-    "traitlets>=4.3.1",
     "typing-extensions>=4.2.0",
-    "widgetsnbextension~=4.0.10",
+    "psygnal>=0.8.1",
 ]
 
 [project.optional-dependencies]
